static/css/main.css
/* ------------------------------------------------------------------------------------------------------------------ */
/* -------------------- */
/* ----- LAYOUT ----- */
/* ------------------ */

body {
    background: #fafafa;
    margin-top: 4rem;
    color: #444444;
}

article.content {min-height: 700px}

article.top-space {margin-top: 5rem;}
article.top-image {margin-top: 1.5rem;}
article.top-button {margin-top: 0.5rem;}

footer {
    color: gray;
    margin-top: 5rem;
}

.header-img {
    height: 6.25rem;
    width: 6.25rem;
}

.page-title {
    font-size: 2.62rem;
    line-height: 1;
}

@media only screen and (max-width: 600px) {
    .header-img {
        height: 5rem;
        width: 5rem;
    }
    .page-title {
        font-size: 1.7rem;
        line-height: 1;
    }
}




/* ------------------------------------------------------------------------------------------------------------------ */
/* -------------------- */
/* ----- GENERAL ----- */
/* ------------------ */

/* PREVENTS USERS FROM SELECTING TEXT ON PAGE:
*:not(textarea):not(input) {
        user-select: none;
}
*/

.border-bottom-dark {border-bottom: 1px solid #444444;}

.btn-space {margin: 2px;}

.errorlist {color: red;}

.hide tr {display: none;}

.pt-6, .py-6 {padding-top: 5rem !important;}
.pr-6, .px-6 {padding-right: 5rem !important;}
.pb-6, .py-6 {padding-bottom: 5rem !important;}
.pl-6, .px-6 {padding-left: 5rem !important;}

.pt-7, .py-7 {padding-top: 6rem !important;}
.pr-7, .px-7 {padding-right: 6rem !important;}
.pb-7, .py-7 {padding-bottom: 6rem !important;}
.pl-7, .px-7 {padding-left: 6rem !important;}

.pt-3_9rem, .py-3_9rem {padding-top: 3.9rem !important;}
.pr-3_9rem, .px-3_9rem {padding-right: 3.9rem !important;}
.pb-3_9rem, .py-3_9rem {padding-bottom: 3.9rem !important;}
.pl-3_9rem, .px-3_9rem {padding-left: 3.9rem !important;}

.pt-4_7rem, .py-3_9rem {padding-top: 4.7rem !important;}
.pr-4_7rem, .px-3_9rem {padding-right: 4.7rem !important;}
.pb-4_7rem, .py-3_9rem {padding-bottom: 4.7rem !important;}
.pl-4_7rem, .px-3_9rem {padding-left: 4.7rem !important;}


td.align-center {text-align: center;}
td.align-right {text-align: right;}

.scrollup {
    width: 64px;
    height: 64px;
    text-decoration: none;
    background: url('/static/img/up.png') 0px 0px;
    background-size: cover;
    position: fixed;
    right: 10px;
    bottom: 10px;
    display: none;
}

.linebreaks-style {
    font-weight: 500;
    line-height: 1.5;
}
.linebreaks-style p {margin-bottom: 0.55rem;}

.border-double {
    border: double #444444;
    border-style: ;
}




/* ------------------------------------------------------------------------------------------------------------------ */
/* ------------------------- */
/* ----- TEXT & FONTS ----- */
/* ----------------------- */

@font-face {
    font-family: 'IM Fell Great Primer';
    src: url("../font/IMFeGPrm29P.ttf");
}

* {font-family: 'IM Fell Great Primer';}

.deep-red {color: #C70039;}

.font-11 {font-size: 0.7rem;}
.font-12 {font-size: 0.75rem;}
.font-14 {font-size: 0.875rem;}
.font-18 {font-size: 1.125rem;}
.font-24 {font-size: 1.5rem;}

small.red {color: red;}

small.smaller {font-size: 12px;}

.small-caps {font-variant: small-caps;}



@media only screen and (min-width: 600px) {
    .sm-nowrap {white-space: nowrap;}
}


/* ------------------------------------------------------------------------------------------------------------------ */
/* -------------------- */
/* ----- IMAGES ----- */
/* ------------------ */

img {border-style: double;}

.article-img {
    height: 5rem;
    width: auto;
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (max-width: 600px) {
    .article-img {height: 4rem;}
}

.img-small {
    height: 30px;
    width: auto;
    margin-left: auto;
    margin-right: auto;
    border: solid 1px black;
}

.img-smaller {
    height: 20px;
    width: auto;
    margin-left: auto;
    margin-right: auto;
    border: solid 1px black;
}
.img-season {
    height: 25px;
    width: auto;
    margin-left: auto;
    margin-right: auto;
    border: 0;
}

.img-skill {
    float: left;
    height: 60px;
    width: 60px;
    margin-right: 5px;
}

.img-numeral {
    float: left;
    height: 30px;
    width: auto;
    margin-right: 5px;
}

a.img-link {
    opacity: 1;
    filter: grayscale(0%);
}

a.img-link:hover {
    opacity: 0.95;
    filter: grayscale(20%);
    color: #444444;
}

img.img-grayscale {filter: grayscale(100%);}


/* Image zoom on hover */
* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.img-hover-zoom {
    position: relative;
    margin: auto;
    overflow: hidden;
}
.img-hover-zoom img {
    max-width: 100%;
    transition: all 1s;
    display: block;
    width: 100%;
    height: auto;
    transform: scale(1);
    border-style: none;
}

.img-hover-zoom:hover img {
    transform: scale(1.2);
}

div.img-hover-zoom {
    border-style: double;
    color: #444444;
}
/* END Image zoom on hover */



/* Required for img modal to show only imgs and center them on the screen */
.img-modal .modal-dialog {
    text-align:center;
    max-width:100rem;
    margin-top:5rem;
}
.img-modal .modal-content {
    display:inline-block;
    width:auto;
    max-width:100rem;
}
.img-modal .modal-body {
    background-color: none;
    padding: 0;
}
.img-modal .modal-body img {
    border: solid black;
    max-height: 50rem;
}
@media only screen and (max-width: 600px) {
    .img-modal .modal-body img {
        border: solid black;
        max-height: 60rem;
        max-width: 19rem;
    }
}
.modal-backdrop
{
    opacity:0.9 !important;
}
/*
This is now only for images with modals in Chronicle, but should be applied to
all images - they all have to get modals, and then these can be generalized:
*/
figure.for-modal img,
div.modal-body img  {pointer-events: none;}

figure.for-modal {cursor: pointer;}



/* ------------------------------------------------------------------------------------------------------------------ */
/* --------------------------------- */
/* ----- LINKS & COLLAPSIBLES ----- */
/* ------------------------------- */

a {color: #444444;}

a:hover {
    text-decoration: none;
    color: #3366cc;
}

.hover-pointer li:hover, a:hover {cursor: pointer;}

.hover-blue:hover {
    color: #3366cc;
    cursor: pointer;
}

.unblue-black a {color: #212529;}



/* ------------------------------------------------------------------------------------------------------------------ */
/* ------------------------- */
/* ---------- FORMS ------- */
/* ----------------------- */

.multiselect-form-small select {
    min-height: 150px;
    width: 400px;
}

.forms td {
    vertical-align: top;
    padding: 2px 10px;
}


/* ------------------------------------------------------------------------------------------------------------------ */
/* ------------------------- */
/* ---------- LISTS ------- */
/* ----------------------- */

ul.bullets-1 li {list-style: "✧";}
ul.bullets-2 li {list-style: "✵";}
ul.bullets-3 li {list-style: "❖";}
ul.bullets-4 li {list-style: "•";}

ul[class^=bullets] > li > * {padding-left: 0.4rem;}

/*
ul[class^=bullets] > li a {
        padding-left: 0.2rem !important;
        padding-right: 0 !important;
}
*/
nav ul.bullets-1 {margin-bottom: 0.5rem;}

nav ul.bullets-1 li {color: #cbd5db;}

.bullets-big li::marker {font-size: 120%;}
.bullets-vbig li::marker {font-size: 170%;}





/* ------------------------------------------------------------------------------------------------------------------ */
/* ------------------------- */
/* ---------- TABS ------- */
/* ----------------------- */

/* Tab Source: https://codepen.io/markcaron/pen/MvGRYV */

/* Tab main interaction */
.tabset > input[type="radio"] {
  position: absolute;
  left: -200vw;
}

.tabset .tab-panel {display: none;}

.tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
.tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
.tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
.tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
.tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
.tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6) {
  display: block;
}

/* Tab Styling */
.tabset > label {
  position: relative;
  display: inline-block;
  padding: 15px 15px 10px;
  border: 1px solid transparent;
  border-bottom: 0;
  cursor: pointer;
  font-weight: 600;
}

.tabset > label:hover {color: #06c;}

.tabset > label:hover::after,
.tabset > input:focus + label::after,
.tabset > input:checked + label::after {background: #06c;}

.tabset > input:checked + label {
  border-color: #ccc;
  border-bottom: 1px solid #fff;
  margin-bottom: -1px;
}

.tab-panel {
  padding: 3rem 0rem;
  border-top: 1px solid #ccc;
}

.tabset label {font-size: 1.75rem;}


@media only screen and (max-width: 600px) {
    .tabset label {font-size: 1.1rem;}
}



/* ------------------------------------------------------------------------------------------------------------------ */
/* ----------------------------------------- */
/* ---------- MODAL WITH INFORM FORM------- */
/* --------------------------------------- */


/* Inform form */
input.select-profile[type=checkbox] {display:none;}
input.select-profile[type=checkbox] + label img:hover {cursor: pointer;}

input.select-profile[type=checkbox] + label {
    filter: grayscale(100%);
    display:inline-block;
}

input.select-profile[type=checkbox]:checked + label {
    filter: grayscale(0%);
    display:inline-block;
}





/* ------------------------------------------------------------------------------------------------------------------ */
/* ----------------------------------------- */
/* ---------- AUDIO ------- */
/* --------------------------------------- */

audio.toponomikon-audio {
    height: 2rem;
    width:100%;
    max-width: 100rem;
    margin-top: -2.17rem;
    padding: 0 0.15rem 0 0.15rem;
    background-color: none;
}

